# splito

./: .gitignore  CNAME  README.md  env.yml  mkdocs.yml  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: code-check.yml  doc.yml  release.yml  test.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/assets/css/: custom-partitio.css
0.0.1/search/: search_index.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/search/: search_index.json
0.1.0/tutorials/: MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/api/: plot.html  simpd.html  splito.html  utils.html
0.1.1/tutorials/: MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/api/: plot.html  simpd.html  splito.html  utils.html
0.1.2/tutorials/: MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/api/: plot.html  simpd.html  splito.html  utils.html
0.1.3/tutorials/: MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/api/: lohi.html  plot.html  simpd.html  splito.html  utils.html
0.1.4/tutorials/: Lo_splitter.html  MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
docs/: index.md
docs/api/: lohi.md  plot.md  simpd.md  split.md  splito.md  utils.md
docs/tutorials/: 01.Basics.ipynb  02.SIMPD_splitting.ipynb  03.Structure-based_splitting.ipynb  04.MOOD_splitting.ipynb  05.More_splitters.ipynb  Lo_splitter.ipynb  MOOD_Protocol.ipynb  MPO_Splitters.ipynb  Other_Splitters.ipynb  Structure-based_Splitters.ipynb  Structure_based_Splitters.ipynb  The_Basics.ipynb  utils.py
main/: 404.html  index.html  sitemap.xml
main/api/: lohi.html  plot.html  simpd.html  splito.html  utils.html
main/assets/css/: custom-splito.css
main/search/: search_index.json
main/tutorials/: Lo_splitter.html  MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
partitio/: _distance_split_base.py  _kmeans_split.py  _max_dissimilarity_split.py  _perimeter_split.py
partitio/simpd/: descriptors.py  splitter.py
splito/: __init__.py  _distance_split_base.py  _mood_split.py  _split.py  plot.py
splito/lohi/: __init__.py  _lo.py  _utils.py
splito/simpd/: descriptors.py  splitter.py
stable/: 404.html  index.html  objects.inv  sitemap.xml
stable/api/: lohi.html  plot.html  simpd.html  splito.html  utils.html
stable/search/: search_index.json
stable/tutorials/: Lo_splitter.html  MOOD_Protocol.html  MPO_Splitters.html  Other_Splitters.html  Structure_based_Splitters.html  The_Basics.html  utils.html
tests/: conftest.py  test_distribution_split.py  test_kmeans_split.py  test_lo.py  test_max_dissimilarity_split.py  test_min_max_split.py  test_mood_split.py  test_mw_split.py  test_perimeter_split.py  test_scaffold_split.py  test_simpd.py  test_split.py
